Fix EnumClass so that it can be used with switch statements. https://bugs.webkit.org/show_bug.cgi?id=109004.

Reviewed by Sam Weinig.

* wtf/EnumClass.h:
(WTF::EnumClass::operator==):
(WTF::EnumClass::operator!=):
(WTF::EnumClass::operator<):
(WTF::EnumClass::operator<=):
(WTF::EnumClass::operator>):
(WTF::EnumClass::operator>=):
(EnumClass):
(WTF::EnumClass::operator Value):



git-svn-id: svn://svn.chromium.org/blink/trunk@141965 bbb929c8-8fbe-4397-9dbb-9b2b20218538